--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,7 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+$stepper-step-step-min-width:45px !default;
+
+$stepper-step-step-icon-font-size:map-deep-get($headings, 'h2', 'size') !default;
